--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: #333;
+    color: #1e1f24;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -15,6 +15,11 @@ body
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo
+{
+    width:20px;
+    vertical-align:middle
 }
 #cabecera #tagline
 {
@@ -33,4 +38,16 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background:#fff;
+    padding:1em
+}
+#footer
+{
+    background:#777;
+    color:#fff;
+    text-align:center;
+    padding:.5em
 }
